# CraftyMod

./: Cargo.toml
src/: main.rs
src/renderer/: camera.rs  chunk.rs  mod.rs  program.rs  renderer.rs  shader.rs  texture.rs  vertex_array.rs
src/shaders/: basic.frag  basic.vs  crosshair.frag  crosshair.vs
src/utils/: macros.rs  math.rs  mod.rs
