[package]
name = "crafty_mod"
version = "0.1.0"
edition = "2021"
#12.5h  

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14"
thiserror = "1.0"
cgmath = "0.16.1"
image = "0.24.5"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
